# nemo-gym

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: build-k8s-images.yml  k8s-integration-test.yml  unit-tests.yml
benchmarks/: nemotron-3-ultra.md  nemotron_3_ultra.yaml
benchmarks/arena_hard/: README.md  config.yaml  prepare.py
benchmarks/arena_hard_v2/: README.md  config.yaml  prepare.py
benchmarks/asr_leaderboard/: README.md  config.yaml  prepare.py
benchmarks/bigcodebench/: README.md  config.yaml  prepare.py
benchmarks/flores200/: README.md  config.yaml  prepare.py
benchmarks/frontierscience_olympiad/: README.md  config.yaml  prepare.py
benchmarks/gsm8k/: README.md  config.yaml  prepare.py
benchmarks/hendrycks_math/: README.md  config.yaml  prepare.py
benchmarks/hle/: README.md  config.yaml  prepare.py
benchmarks/hotpotqa_closedbook/: README.md  config.yaml  prepare.py
benchmarks/human_eval/: README.md  config.yaml  prepare.py
benchmarks/human_eval_infilling/: README.md  (+2 more)
docs/: index.md
fern/: docs.yml
k8s/: Dockerfile  README.md  entrypoint.sh
nemo_gym/: config_types.py  global_config.py  rollout_collection.py  server_metadata.py  server_utils.py
resources_servers/code_fim/: README.md  app.py  pyproject.toml
resources_servers/code_fim/configs/: code_fim.yaml
resources_servers/code_fim/data/: .gitignore  example.jsonl  example_metrics.json  example_rollouts.jsonl
resources_servers/code_fim/human_eval_infilling_integration/: runner.py
resources_servers/code_fim/tests/: test_app.py
scripts/: update_env_list.py
(+285 files in other folders)
